--- a/configs/bbblue_defconfig
+++ b/configs/bbblue_defconfig
@@ -1,17 +1,60 @@
 BR2_arm=y
 BR2_cortex_a8=y
-BR2_GLOBAL_PATCH_DIR="board/beaglebone/patches"
-BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_4_14=y
-BR2_ROOTFS_POST_IMAGE_SCRIPT="board/beaglebone/post-image.sh"
+BR2_DL_DIR="$(TOPDIR)/../br_download"
+BR2_GLOBAL_PATCH_DIR="board/bbblue/patches"
+BR2_PACKAGE_HOST_LINUX_HEADERS_CUSTOM_4_19=y
+BR2_TOOLCHAIN_BUILDROOT_WCHAR=y
+BR2_TOOLCHAIN_BUILDROOT_CXX=y
+BR2_TARGET_GENERIC_HOSTNAME="pilot"
+BR2_TARGET_GENERIC_ISSUE="Welcome to pilot"
+BR2_TARGET_GENERIC_ROOT_PASSWD="root"
+BR2_ROOTFS_OVERLAY="board/bbblue/rootfs-overlay"
+BR2_ROOTFS_POST_BUILD_SCRIPT="board/bbblue/tunefs.sh"
+BR2_ROOTFS_POST_IMAGE_SCRIPT="board/bbblue/post-image.sh"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_GIT=y
-BR2_LINUX_KERNEL_CUSTOM_REPO_URL="git://git.ti.com/processor-sdk/processor-sdk-linux.git"
-BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION="4796173fc58688055a99a1cef19a839174067220"
-BR2_LINUX_KERNEL_DEFCONFIG="omap2plus"
+BR2_LINUX_KERNEL_CUSTOM_REPO_URL="https://github.com/drone-labs/linux.git"
+BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION="4.19-rt"
+BR2_LINUX_KERNEL_DEFCONFIG="bb.org"
 BR2_LINUX_KERNEL_DTS_SUPPORT=y
-BR2_LINUX_KERNEL_INTREE_DTS_NAME="am335x-evm am335x-bone am335x-boneblack am335x-bonegreen am335x-evmsk"
+BR2_LINUX_KERNEL_INTREE_DTS_NAME="am335x-boneblue"
+BR2_LINUX_KERNEL_DTB_OVERLAY_SUPPORT=y
+BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
+BR2_PACKAGE_BZIP2=y
+BR2_PACKAGE_GZIP=y
+BR2_PACKAGE_UNZIP=y
+BR2_PACKAGE_ZIP=y
+BR2_PACKAGE_AM335X_PRU_PACKAGE=y
+BR2_PACKAGE_GPSD=y
+BR2_PACKAGE_GPSD_DEVICES="/dev/ttyS2"
+BR2_PACKAGE_GPSD_NMEA2000=y
+BR2_PACKAGE_GPSD_SIRF=y
+BR2_PACKAGE_I2C_TOOLS=y
+BR2_PACKAGE_LM_SENSORS=y
+BR2_PACKAGE_LSHW=y
+BR2_PACKAGE_LSUIO=y
+BR2_PACKAGE_NANOCOM=y
+BR2_PACKAGE_PRU_SOFTWARE_SUPPORT=y
+BR2_PACKAGE_SPI_TOOLS=y
+BR2_PACKAGE_TI_UIM=y
+BR2_PACKAGE_TI_UTILS=y
+BR2_PACKAGE_UBOOT_TOOLS=y
+BR2_PACKAGE_UBOOT_TOOLS_FIT_SUPPORT=y
+BR2_PACKAGE_UBOOT_TOOLS_FIT_SIGNATURE_SUPPORT=y
+BR2_PACKAGE_UBOOT_TOOLS_MKIMAGE=y
+BR2_PACKAGE_UBOOT_TOOLS_MKENVIMAGE=y
+BR2_PACKAGE_UBOOT_TOOLS_DUMPIMAGE=y
+BR2_PACKAGE_DROPBEAR=y
+BR2_PACKAGE_IFPLUGD=y
+BR2_PACKAGE_WPA_SUPPLICANT=y
+BR2_PACKAGE_WPA_SUPPLICANT_WPA_CLIENT_SO=y
+BR2_PACKAGE_WPA_SUPPLICANT_PASSPHRASE=y
+BR2_PACKAGE_CPULOAD=y
+BR2_PACKAGE_NANO=y
 BR2_TARGET_ROOTFS_EXT2=y
 BR2_TARGET_ROOTFS_EXT2_4=y
+BR2_TARGET_ROOTFS_EXT2_SIZE="256M"
+# BR2_TARGET_ROOTFS_TAR is not set
 BR2_TARGET_UBOOT=y
 BR2_TARGET_UBOOT_BUILD_SYSTEM_KCONFIG=y
 BR2_TARGET_UBOOT_CUSTOM_VERSION=y
